TAG: lib_java_dbsmgd-maint6300
DATE: 01/12/05
STAFF: jw
CHANGES: None

TAG: lib_java_dbsmgd-3-1-0-1
DATE: 12/17/2004
STAFF: sc
CHANGES: merge of tr6365_2 branch

TAG: lib_java_dbsmgd-tr6365_2-1
DATE: 12/16/2004
STAFF: sc
CHANGES: tr6365_2 branch created of off lib_java_dbsmgd-patch302-1 tag on trunk
1) LogicalDBConstants - added NIA15K, NIA7_4K, RIKEN
2) AssocClonesLookup - implemented the partialInitQuery

TAG: lib_java_dbsmgd-1-0-34
DATE: 12/02/2004
STAFF: mbw
CHANGES: changed the use of floats to doubls in MarkerFactory and SequenceFactory

TAG: lib_java_dbsmgd-tr6365-BP
DATE: 12/01/2004
STAFF: sc
CHANGES: Branch point tag

TAG: lib_java_dbsmgd-1-0-33
DATE: 11/23/2004
STAFF: jsb
CHANGES:
1) merge changes in from patch302 branch

TAG: lib_java_dbsmgd-patch302-1
DATE: 11/09/2004
STAFF: jsb
CHANGES:
1) fixes to SequencerFactory.java for 3.02 release, for multi-clone coll.

TAG: lib_java_dbsmgd-1-0-32
DATE: 10/22/2004
STAFF: sc
CHANGES: TR5395
1) Josh made changes to: DBConstants.java, MarkerFactory.java, 
   SequenceFactory.java

TAG: lib_java_dbsmgd-1-0-31
DATE: 10/20/2004
STAFF: sc
CHANGES: TR5395
1) Added ChromosomeKeyLookup

TAG: lib_java_dbsmgd-1-0-30
DATE: 10/20/2004
STAFF: sc
CHANGES: TR5395
1) Added new keys to VocabularyTypeConstants, MGIRefAssocTypeConstants,
   LogicalDBConstants, MGITypeConstants
2) generatedTables.txt - added MAP_Coordinate, MAP_Coord_Feature, MRK_Chromosome
3) Added MGITypeLookup and  CoordMapCollectionKeyLookup.java

TAG: lib_java_dbsmgd-1-0-29
DATE: 08/04/2004
STAFF: jsb, jw
CHANGES:
1) fixes to MarkerFactory.java and SequenceFactory.jar for 3.01 release

TAG: lib_java_dbsmgd-1-0-28
DATE: 05/27/2004
STAFF: jsb
CHANGES:
1) fixes to MarkerFactory.java to ensure retrieval of distinct sequences

TAG: lib_java_dbsmgd-1-0-27
DATE: 05/24/2004
STAFF: jsb
CHANGES:
1) fixes to MarkerFactory.java + DBConstants.java to deal w/ interim nomen

TAG: lib_java_dbsmgd-1-0-26
DATE: 05/19/2004
STAFF: jsb
CHANGES: