@@ -1,3 +1,15 @@
+TAG: lib_java_dbsmgd-3-1-1-1
+DATE: 01/26/2005
+STAFF: pf
+CHANGES: merge of the maint6300 branch
+
+TAG: lib_java_dbsmgd-maint6300-2
+DATE: 01/24/05
+STAFF: jw
+RELEASE: alpha
+CHANGES: 
+1) checked in MarkerFactory.java changes that had been on wrong branch
+
 TAG: lib_java_dbsmgd-maint6300
 DATE: 01/12/05
 STAFF: jw
